2013-11-11  Joel Brobecker  <brobecker@adacore.com>

	* utils.c (perror_string): New function, extracted out of
	throw_perror_with_name.
	(throw_perror_with_name): Rework to use perror_string.

2013-10-11  Yao Qi  <yao@codesourcery.com>

	* remote.c (discard_pending_stop_replies_in_queue): Update
	declaration.
	(struct stop_reply) <rs>: New field.
	(remove_stop_reply_of_remote_state): New function.
	(discard_pending_stop_replies_in_queue): Add parameter 'rs'.
	Callers update.  Pass remove_stop_reply_of_remote_state to
	QUEUE_iterate.
	(remote_parse_stop_reply): Initialize field 'rs'.

2013-10-10  Will Newton  <will.newton@linaro.org>

	* aarch64-linux-tdep.c (aarch64_linux_init_abi): Call
	linux_init_abi.

2013-10-10  Joel Brobecker  <brobecker@adacore.com>

	* cli/cli-cmds.c (show_baud_rate): Moved to serial.c as
	serial_baud_show_cmd.
	(_initialize_cli_cmds): Delete the code creating the
	"set/show remotebaud" commands.
	* serial.c (baud_rate): Move here from top.c.
	(serial_baud_show_cmd): Move here from cli/cli-cmds.c.
	(_initialize_serial): Create "set/show serial baud" commands.
	Add "set/show remotebaud" command aliases.
	* top.c (baud_rate): Moved to serial.c.
	* NEWS: Document the new "set/show serial baud" commands,
	replacing "set/show remotebaud".

2013-10-09  Pedro Alves  <palves@redhat.com>

	* breakpoint.c (insert_bp_location): Use memory_error_message to
	build the memory error string.
	* c-lang.c: Include "gdbcore.h".
	(c_get_string): Use memory_error to throw error.
	(target_xfer_memory_error): Delete.
	(memory_error_message): New, factored out from
	target_xfer_memory_error.
	(memory_error): Change parameter type to target_xfer_error.
	Rewrite.
	(read_memory): Use memory_error instead of
	target_xfer_memory_error.
	* gdbcore.h: Include "target.h".
	(memory_error): Change parameter type to target_xfer_error.
	(memory_error_message): Declare function.
	* target.c (target_read_memory, target_read_stack)